--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-yaml": "^4.1.0",
     "loadsh": "^0.0.4",
     "mysql2": "^3.10.0",
+    "nestjs-pino": "^4.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
